Updated by mdAutofix.py

--- a/c-legacy-releases/2020/02202020.md
+++ b/c-legacy-releases/2020/02202020.md
@@ -81,7 +81,7 @@ Adobe 正在更新網域和介面標題，以統一及提升您在所有 Experie
 * 改良產品說明：[!UICONTROL Experience League] 已整合至產品中，因此搜尋說明內容時，搜尋範圍會包含社群論壇和影片內容。這項變更可讓您輕鬆存取更多內容，協助您充份運用 Experience Cloud。此外，選取&#x200B;**[!UICONTROL 「說明]** > **[!UICONTROL 意見回饋」]**&#x200B;即可回報問題，或與 Adobe 分享您的想法。
 * 改良通知：[!UICONTROL 「通知」]下拉式選單現在提供兩個標籤，其中一個是您的產品通知，另一個是全球產品公告。
 
-**注意：**[!UICONTROL 「摘要」]頁面將於 2020 年 1 月汰除。請參閱產品中的淘汰通知。
+**注意：**&#x200B;[!UICONTROL 「摘要」]頁面將於 2020 年 1 月汰除。請參閱產品中的淘汰通知。
 
 如需產品文件，請參閱 [Experience Cloud](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant)。
 
