--- a/c-legacy-releases/2021/03252021.md
+++ b/c-legacy-releases/2021/03252021.md
@@ -175,7 +175,7 @@ AN-206099；AN-237460；AN-241803；AN-243735；AN-244081；AN-244615；AN-24468
 
 | 注意 | 新增或更新日期 | 說明 |
 | ----------- | ---------- | ---------- |
-| [!UICONTROL 完整處理][!UICONTROL 資料來源]的生命週期結束 | 2021 年 4 月 12 日 | Adobe 計劃在 2021 年 7 月 31 日淘汰[!UICONTROL 完整處理][!UICONTROL 資料來源]。自 2021 年 3 月 25 日起，將無法再建立此類型的新匯入。使用[大量資料插入 API](https://www.adobe.io/apis/experiencecloud/analytics/docs.html#!AdobeDocs/analytics-2.0-apis/master/bdia.md) 可匯入此類型的資料。[了解更多](https://experienceleague.adobe.com/docs/analytics/import/data-sources/data-types-and-categories/datasrc-fullproc-eol.html?lang=zh-Hant) |
+| [!UICONTROL 完整處理]&#x200B;[!UICONTROL 資料來源]的生命週期結束 | 2021 年 4 月 12 日 | Adobe 計劃在 2021 年 7 月 31 日淘汰[!UICONTROL 完整處理]&#x200B;[!UICONTROL 資料來源]。自 2021 年 3 月 25 日起，將無法再建立此類型的新匯入。使用[大量資料插入 API](https://www.adobe.io/apis/experiencecloud/analytics/docs.html#!AdobeDocs/analytics-2.0-apis/master/bdia.md) 可匯入此類型的資料。[了解更多](https://experienceleague.adobe.com/docs/analytics/import/data-sources/data-types-and-categories/datasrc-fullproc-eol.html?lang=zh-Hant) |
 | [!UICONTROL Report Builder] 登入更新 | 2021 年 4 月 9 日 | 在 2021 年 1 月 14 日，[!UICONTROL Report Builder] 登入更新移除對舊版技術的相依性，並使登入程序符合 Experience Cloud。Experience Cloud 使用您的 Enterprise ID (電子郵件和密碼)。為確保對 [!UICONTROL Report Builder] 的存取不中斷，請於 2021 年 7 月 22 日前將 [!UICONTROL Report Builder] 增益集更新至 5.6.47 版或更新版本。Report Builder 5.6.47 版或更新版本只支援 Experience Cloud 登入，不支援單一登入。 |
 | 資料摘要和 Data Warehouse IP 位址變更 | 2021 年 4 月 6 日 | 自 6 月 17 日起，資料摘要和 Data Warehouse 傳遞系統將在我們的資料中心內搬遷，因此您可能會看到外部 IP 位址變更。您應確認，您的報表和資料摘要之來源資料中心的所有 IP CIDR 區塊，都存在於您所控制的任何目標系統的任何防火牆內。 |
 | 即將推出之 Analytics 選單變更的通知 | 2021 年 3 月 24 日 | 於 2021 年 4 月 22 日，我們將更新「**[!UICONTROL 元件]**」、「**[!UICONTROL 工具]**」和「**[!UICONTROL 管理員]**」下拉選單，以提高效能。所有這些頁面仍可在「**[!UICONTROL 所有元件]**」、「**[!UICONTROL 所有工具]**」和「**[!UICONTROL 所有管理員]**」連結下取得 - 只是從下拉選單中移除而已。以下是將從下拉選單中移除並放置在其相對應連結頁面上的選單項目：<br><br> [!UICONTROL 元件]<ul><li>[!UICONTROL 書籤]</li><li>[!UICONTROL 儀表板]</li><li>[!UICONTROL 目標]</li><li>[!UICONTROL 日曆事件]</li><li>[!UICONTROL 排程報告]</li><li>[!UICONTROL 報表設定]</li></ul>[!UICONTROL 工具]<ul><li>[!UICONTROL 推薦經典版]</li><li>[!UICONTROL Search &amp; Promote]</li></ul>[!UICONTROL 管理員]<ul><li>[!UICONTROL 用戶管理]</li><li>[!UICONTROL 分類匯入工具]</li><li>[!UICONTROL 分類規則產生器]</li><li>[!UICONTROL 資料來源]</li><li>[!UICONTROL 資料連接器]</li><li>[!UICONTROL 公司設定]</li><li>[!UICONTROL 記錄]</li><li>[!UICONTROL 動態標籤管理]</li><li>[!UICONTROL 代碼管理器]</li><li>[!UICONTROL 依 IP 排除]</li><li>[!UICONTROL 流量管理]</li></ul> |
