--- a/c-legacy-releases/2022/02162022.md
+++ b/c-legacy-releases/2022/02162022.md
@@ -15,7 +15,7 @@ ht-degree: 98%
 
 # Adobe Experience Cloud 發行說明 - 2022 年 2 月
 
-身為 Experience Maker，您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/#home)。尋找廣大的操作說明文件庫、自我引導式教學課程、操作說明影片、所有等級和角色適用的課程、線上同業社群，以及需要時的專家支援。
+身為 Experience Maker，您的成功之道始於 [&#x200B; Experience League](https://experienceleague.adobe.com/#home)。尋找廣大的操作說明文件庫、自我引導式教學課程、操作說明影片、所有等級和角色適用的課程、線上同業社群，以及需要時的專家支援。
 
 **2022 年 2 月**
 
@@ -42,7 +42,7 @@ ht-degree: 98%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [&#x200B; Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## [!DNL Experience League] 活動 {#events}
 
@@ -165,8 +165,8 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
   觀看 [2022 年 1 月版本概觀影片](https://video.tv.adobe.com/v/340120)，了解 2022.1.0 (2022 年 1 月) 版本新增功能摘要。
 
    * [2021 年 12 月版本新功能的概觀影片](https://video.tv.adobe.com/v/339278)。
-   * [](https://video.tv.adobe.com/v/338253)2021 年 10 月版本概觀 新功能影片。
-   * [](https://video.tv.adobe.com/v/337381)2021 年 9 月版本概觀 新功能影片。
+   * [&#128279;](https://video.tv.adobe.com/v/338253)2021 年 10 月版本概觀 新功能影片。
+   * [&#128279;](https://video.tv.adobe.com/v/337381)2021 年 9 月版本概觀 新功能影片。
 
    * **Experience Manager Assets as a Cloud Service**
 
@@ -399,9 +399,9 @@ Adobe [!DNL Workfront] 是統一的工作管理應用程式，用於共用構想
 
 [!DNL Adobe Advertising Cloud] 版本注意事項。
 
-* [ [!DNL Advertising Cloud] 的新功能](#adcloud-all)
-* [ [!DNL Advertising Cloud DSP] 中的新功能](#adcloud-dsp)
-* [ [!DNL Advertising Cloud Search] 中的新功能](#adcloud-search)
+* [&#x200B; [!DNL Advertising Cloud] 的新功能](#adcloud-all)
+* [&#x200B; [!DNL Advertising Cloud DSP] 中的新功能](#adcloud-dsp)
+* [&#x200B; [!DNL Advertising Cloud Search] 中的新功能](#adcloud-search)
 * [新  [!DNL Advertising Cloud] 教學課程](#tutorials-ad-cloud)
 
 ### [!DNL Advertising Cloud] 的新功能 {#adcloud-all}
