--- a/c-legacy-releases/2022/05182022.md
+++ b/c-legacy-releases/2022/05182022.md
@@ -15,7 +15,7 @@ ht-degree: 98%
 
 # Adobe Experience Cloud 版本注意事項 - 2022 年 5 月
 
-身為 Experience Maker，您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/#home)。尋找廣大的操作說明文件庫、自我引導式教學課程、操作說明影片、所有等級和角色適用的課程、線上同業社群，以及需要時的專家支援。
+身為 Experience Maker，您的成功之道始於 [&#x200B; Experience League](https://experienceleague.adobe.com/#home)。尋找廣大的操作說明文件庫、自我引導式教學課程、操作說明影片、所有等級和角色適用的課程、線上同業社群，以及需要時的專家支援。
 
 最近更新日期：**2022 年 5 月 27 日**
 
@@ -40,7 +40,7 @@ ht-degree: 98%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [&#x200B; Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## [!DNL Adobe System Status] {#status}
 
@@ -206,7 +206,7 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
 * **Experience Manager as a Cloud Service 基礎**
 
-  _**SDK Build Analyzer**_
+  _&#x200B;**SDK Build Analyzer**&#x200B;_
 
   Experience Manager as a Cloud Service SDK Build Analyzer Maven 外掛程式會偵測 maven 專案中的問題，包括遺漏的相依項目。它讓開發人員有機會在本機開發期間以及使用 Cloud Manager 部署到雲端環境之前發現問題。
 
@@ -396,8 +396,8 @@ Adobe [!DNL Workfront] 是統一的工作管理應用程式，用於共用構想
 
 [!DNL Adobe Advertising Cloud] 發行說明。
 
-* [ [!DNL Advertising Cloud DSP] 中的新功能](#adcloud-dsp)
-* [ [!DNL Advertising Cloud Search] 中的新功能](#adcloud-search)
+* [&#x200B; [!DNL Advertising Cloud DSP] 中的新功能](#adcloud-dsp)
+* [&#x200B; [!DNL Advertising Cloud Search] 中的新功能](#adcloud-search)
 
 ### [!DNL Advertising Cloud DSP] 中的新功能 {#adcloud-dsp}
 
