Updated by mdLocalizeVideoLinks.py

--- a/c-legacy-releases/2024/01112024.md
+++ b/c-legacy-releases/2024/01112024.md
@@ -313,7 +313,7 @@ Adobe 建議您瀏覽以下資源，以隨時掌握發佈內容資訊：
 
 ### 最新版本概觀影片
 
-觀看 [2024 年 1 月版本概觀影片](https://video.tv.adobe.com/v/3427041?quality=12")，了解 2024.01.0 (2024 年 1 月) 版本新增功能摘要。
+觀看 [2024 年 1 月版本概觀影片](https://video.tv.adobe.com/v/3448940?captions=chi_hant&quality=12")，了解 2024.01.0 (2024 年 1 月) 版本新增功能摘要。
 
 ### [!DNL Experience Manager Sites] as a [!DNL Cloud Service]
 
